@@ -3,6 +3,9 @@
     - Document how to use different backends.
     - Add cookie getter/setter.
     - Rename delete_cookie to cookie_delete.
+    - Add support for asynchronous JavaScript.
+    - Rename execute to js.
+    - Rename execute_phantom to js_phantom.
 
 0.002 2015-07-05
     - $drv->() caches the closure and is now twice as fast.
